# ChessCPP

./: .gitignore
src/: Board.cpp  Board.h  CMakeLists.txt  CrossPlatform.h  Move.h  MoveList.cpp  MoveList.h  PerformantBoard.cpp  PerformantBoard.h  Profiler.h  Random.h  Search.cpp  Search.h  TranspositionTable.cpp  TranspositionTable.h  TreeDebug.cpp  TreeDebug.h  UCI.cpp  UCI.h  Zobrist.cpp  Zobrist.h  main.cpp  tree.gexf
src/TranspositionTests/: TranspositionTests.cpp
src/board_test/: main.cpp
src/magics/: MagicSearch.cpp  MagicSearch.h  main.cpp
test_harness/: Chess  README.md  main.py  playMatch.py  playSingleGame.py
